@@ -17,7 +17,7 @@
 	<description>Resource Service module for ConstructionXpert</description>
 
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>com.resource_service.ResourceServiceApplication</start-class>
@@ -37,7 +37,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.9.1.2184</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
@@ -77,15 +82,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version> <!-- Utilisez une version récente compatible avec Java 21 -->
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<compilerArgs>
 						<arg>--enable-preview</arg>
-						<arg>-Xlint:preview</arg> <!-- Optionnel : pour des avertissements détaillés -->
 					</compilerArgs>
-					<fork>true</fork>
 				</configuration>
 			</plugin>
 
@@ -93,28 +95,23 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-				</configuration>
+				<version>3.3.1</version>
 			</plugin>
 
-			<!-- Sonar Maven Plugin -->
-			<plugin>
-				<groupId>org.sonarsource.scanner.maven</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-				<version>3.3.0.603</version>
-				<executions>
-					<execution>
-						<phase>verify</phase>
-						<goals>
-							<goal>sonar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!--			&lt;!&ndash; Sonar Maven Plugin &ndash;&gt;-->
+<!--			<plugin>-->
+<!--				<groupId>org.sonarsource.scanner.maven</groupId>-->
+<!--				<artifactId>sonar-maven-plugin</artifactId>-->
+<!--				<version>3.3.0.603</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<phase>verify</phase>-->
+<!--						<goals>-->
+<!--							<goal>sonar</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 </project>
